--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- Main -->
+    <script defer src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="./styles.css" />
     <script defer src="./script.js"></script>
     <title>Chat App</title>
