Created function that generates user message
- Created a variables for message input and button
- Created a functions that generates different types of user message

--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,8 @@
   		
   		<!-- Message input section -->
   		<section class="user-input-container">
-  			<input type="text" placeholder="Type a message">
-  			<button class="fa-solid fa-paper-plane"></button>
+  			<input id="inputMsg" type="text" placeholder="Type a message">
+  			<button id="sendMsgBtn" class="fa-solid fa-paper-plane"></button>
   		</section>
   	</div>
   	<!-- Online user list section -->
