Added function to save past message that to be generated on new user connection
- Changed package moment to moment-timezone
- Used Asia/Manila as main timezone for messages
- Created a wrapper for old message in html
- Saves past message to an array in server

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
   		
   		<!-- Message output section -->
   		<section class="msg-container">
-  			<div id="current-msg-wrapper"></div>
+  			<div id="current-msg-wrapper">
+  				<div id="old-msg-wrapper"></div>
+  			</div>
   		</section>
   		
   		<!-- Message input section -->
